# LeSLiE

./: .gitignore  CMakeLists.txt
cmake/: FindEigen3.cmake  FindTCLAP.cmake
input/: example_absorber.csv
leslie/: filereadertxt.hpp  filewritertxt.hpp  functions1d.hpp  functionspace1d.hpp
lsq/: filereadertxt.hpp
src/: lsqMain.C
